# osu_helper_script

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build.rs  dprint.json
.github/workflows/: release.yml  test.yml
scripts/: upload.sh
src/: cli.rs  constants.rs  errors.rs  github.rs  local.rs  main.rs  net.rs
src/commands/: install.rs  mod.rs  remove.rs  update.rs
