[package]
name = "osu_helper_script"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
dirs = "5.0.1"
indicatif = "0.17.5"
inquire = "0.6.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
ureq = { version = "2.6.2", features = ["json"] }
