[package]
name = "osu_helper_script"
version = "0.1.6"
edition = "2021"
build = "build.rs"

[profile.release]
lto = true

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
colored = "2.0.4"
dirs = "5.0.1"
indicatif = "0.17.5"
inquire = "0.6.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
ureq = { version = "2.6.2", features = ["json"] }

[build-dependencies]
clap = { version = "4.3.0", features = ["derive"] }
clap_complete = "4.3.2"
